--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -11,6 +11,7 @@
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 <body class="mat-typography">
+  <header></header>
   <login-form></login-form>
   <app-root></app-root>
 </body>
